# study

./: .gitignore  README.md  Redux.xmind  quicksort.linq
C/zadachki/: BitCounter.cpp  BitCounter.h  CMakeLists.txt  main.cpp
C/zadachki/src/: BitCounter.cpp
CNG/: .gitignore  CNG.sln  readme.md
CQRS/: cqrs.sln
CodeAccessSecurity/: CodeAccessSecurity.sln
ELK/: query-examples.md
EventLog/: play-with-eventlog.linq
PKI/: .gitignore
RedisHW/: RedisPublishSubscribe.sln
Rx/: Rx.sln
Uml/: UML.eap  UML.ldb  Крэг_Ларман._Применение_UML_и_шаблонов_проектирован.xmind
WiX/: Notes.md  SampleFirst.msi  SampleFirst.wixobj  SampleFirst.wixpdb  SampleFirst.wxs
apache-thrift/: service.thrift
base interfaces/: solution.sln
camunda/: Camunda.postman_collection.json  approve-payment.dmn  camunda.txt  docker-compose.yml  getting_started.bpmn  readme.md  start-process.bat
clean-code (R.Martin)/: Чистый_код_(Р.Мартин).xmind
code-access-security/: code-access-security.sln
data-protection-api/: DPAPIDemo.sln
dynamodb/: create_table.py  insert_items.py  main.py  query_items.py
knockout-js/: basic.html  working-with-lists.html
lightdb/: LIghtDb.linq
linqpad/: TeplyakovsDisposablePattern.linq
lisp/: hello-world.lisp
nginx asp.net web api/: demo.sln
prometheus/: main.py
ps/: create-store-addressbook.ps1
python/: crypt.py  main.py
rabbit/: rabbit.sln
react_express_app/: bower.json  gulpfile.js  package.json
redux/: Redux.xmind
simulation in python/: circle_square_monte_carlo.ipynb
smtp/: sendmail.linq
spring-boot-example/: build.gradle  (+1 more)
(+599 files in other folders)
